--- a/app/error.html
+++ b/app/error.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>app-staticsite-storage-aws error</title>
+        <title>aws-s3 error</title>
         <meta http-equiv=Content-Type content="text/html; charset=utf-8">
     </head>
     <body>
