--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
         <li>e muito, muito mais ...</li>
         </ul>
         <p></p>
-        <p><b>Kledson Basso</b><br /><a href="https://www.linkedin.com/in/kledsonbasso/">https://www.linkedin.com/in/kledsonbasso/</a></p>
+        <p><b>Nickolas Corazza Alves</b><br /><a href="https://www.linkedin.com/in/kledsonbasso/">https://www.linkedin.com/in/kledsonbasso/</a></p>
         <p></p>
     </body>
 </html>
